# TOY-Interpreter

./: CMakeLists.txt  LICENSE  README.md  test.toy
src/: ToyCallable.hpp  ast_printer.hpp  environment.hpp  expr.hpp  interpreter.hpp  main.cpp  parser.hpp  scanner.hpp  token.hpp  utils.hpp
